# ros2-datastream

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.claude/: settings.local.json
.cursor/rules/: quality-check.mdc
docs/: ai_worker_guide.md  architecture.md  robot_design.md  robotics_worker_guide.md  things_todo.md  topics.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/css/: style.css
frontend/e2e/: debug_mission.js  debug_stairs2.js  package-lock.json  package.json  playwright.config.js
frontend/e2e/helpers/: ros.js
frontend/e2e/test-results/: .last-run.json
frontend/e2e/tests/: 01_boot.spec.js  02_manual_drive.spec.js  03_stairs.spec.js  04_towel_mission.spec.js  05_arm_console.spec.js  06_safety_stop.spec.js  07_sensors.spec.js  08_skin_upload.spec.js  09_water_hazard.spec.js
frontend/js/: app.js
frontend/src/: config.js  main.js
frontend/src/core/: clock.js  rng.js
frontend/src/env/: layout.js  materials.js  objects.js  steam.js
frontend/tests/: kinematics.test.js  noise.test.js  spec.test.js
shared/: object_profiles.json  onsen_layout.json  robot_spec.json
src/onsen_ai_worker/: package.xml  setup.py
src/onsen_dummy_robot/: package.xml  setup.py
src/onsen_robot_state/: package.xml  setup.py
src/onsen_robot_state/onsen_robot_state/: robot_state_aggregator_node.py  safety.py  topics.py
src/onsen_robot_state/scripts/: robot_state_aggregator_node
src/onsen_robot_state/test/: test_safety.py
(+58 files in other folders)
