<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>onsen_robot_state</name>
  <version>2.0.0</version>
  <description>Robot state aggregation and safety supervision for the onsen robot:
    contact-driven emergency stop, tilt monitoring, fused /robot/state.</description>
  <maintainer email="chtsogbadrakh@gmail.com">Onsen Robot</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
